; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/setupapi/extr_rpc.c_PnpBindRpc.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/setupapi/extr_rpc.c_PnpBindRpc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i32] [i32 110, i32 99, i32 97, i32 99, i32 110, i32 95, i32 110, i32 112, i32 0], align 4
@.str.1 = private unnamed_addr constant [15 x i32] [i32 92, i32 112, i32 105, i32 112, i32 101, i32 92, i32 112, i32 108, i32 117, i32 103, i32 112, i32 108, i32 97, i32 121, i32 0], align 4
@RPC_S_OK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @PnpBindRpc(i64 %0, i32* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* null, i32** %6, align 8
  %8 = load i64, i64* %4, align 8
  %9 = trunc i64 %8 to i32
  %10 = call i64 @RpcStringBindingComposeW(i32* null, i8* bitcast ([9 x i32]* @.str to i8*), i32 %9, i8* bitcast ([15 x i32]* @.str.1 to i8*), i32* null, i32** %6)
  store i64 %10, i64* %7, align 8
  %11 = load i64, i64* %7, align 8
  %12 = load i64, i64* @RPC_S_OK, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i64, i64* %7, align 8
  store i64 %15, i64* %3, align 8
  br label %22

16:                                               ; preds = %2
  %17 = load i32*, i32** %6, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = call i64 @RpcBindingFromStringBindingW(i32* %17, i32* %18)
  store i64 %19, i64* %7, align 8
  %20 = call i32 @RpcStringFreeW(i32** %6)
  %21 = load i64, i64* %7, align 8
  store i64 %21, i64* %3, align 8
  br label %22

22:                                               ; preds = %16, %14
  %23 = load i64, i64* %3, align 8
  ret i64 %23
}

declare dso_local i64 @RpcStringBindingComposeW(i32*, i8*, i32, i8*, i32*, i32**) #1

declare dso_local i64 @RpcBindingFromStringBindingW(i32*, i32*) #1

declare dso_local i32 @RpcStringFreeW(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
